--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,3 +17,25 @@ jobs:
       run: ./src/build_protobuf.bat
     - name: build2
       run: ./src/build_protobuf_c.bat
+    - name: pack
+      run: 7z a protobuf-c-win64.zip .\protobuf-c\build-cmake\build\out\*
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1.4.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./protobuf-c-win64.zip
+        asset_name: protobuf-c-win64.zip
+        asset_content_type: application/zip
