--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,12 +8,13 @@ jobs:
     name: release
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@main
     - name: submodule
       run: git submodule update --init
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
+        vs-version: '[16,17)'
         msbuild-architecture: x64
     - name: build1
       run: ./src/build_protobuf.bat
