--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
+        vs-version: '[16,18)'
         msbuild-architecture: x64
     - name: build1
       run: ./src/build_protobuf.bat
