--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ name: release
 jobs:
   excavate:
     name: release
-    runs-on: windows-latest
+    runs-on: windows-2019
     steps:
     - uses: actions/checkout@main
     - name: submodule
@@ -14,7 +14,7 @@ jobs:
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
-        vs-version: '[16,18)'
+        vs-version: '[16,17)'
         msbuild-architecture: x64
     - name: build1
       run: ./src/build_protobuf.bat
