--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,11 +17,13 @@ jobs:
         vs-version: '[16,17)'
         msbuild-architecture: x64
     - name: build protobuf
-      run: ./src/build_protobuf.bat
+      run: python ci.py build --cmake --project=protobuf
     - name: build protobuf-c
-      run: ./src/build_protobuf_c.bat
+      run: python ci.py build --project=protobuf-c
+    - name: test protobuf-c
+      run: python ci.py test --project=protobuf-c
     - name: pack
-      run: 7z a protobuf-c-win64.zip .\protobuf-c\build-cmake\build\out\*
+      run: python ci.py pack --project=protobuf-c
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
