--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@main
     - name: submodule
-      run: git submodule update --init
+      run: git submodule update --init --recursive
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
