--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,40 +1,29 @@
+name: release
+
 on:
   push:
     tags:
     - 'v*'
-name: release
+
 jobs:
   excavate:
     name: release
-    runs-on: windows-2019
+    runs-on: windows-2022
     steps:
     - uses: actions/checkout@main
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.13'
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v2
+      with:
+        vs-version: '[17,18)'
+        msbuild-architecture: x64
     - name: submodule
       run: git submodule update --init --recursive
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.1
-      with:
-        vs-version: '[16,17)'
-        msbuild-architecture: x64
     - name: build
       run: python ci.py
     - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./protobuf-c-win64.zip
-        asset_name: protobuf-c-win64.zip
-        asset_content_type: application/zip
+          files: protobuf-c-win64.zip
