Use `cc_proto_library`

--- a/src/protobuf-c/BUILD
+++ b/src/protobuf-c/BUILD
@@ -1,5 +1,15 @@
 package(default_visibility = ["//visibility:public"])
 
+cc_proto_library(
+    name = "protobuf-c_cc_proto",
+    deps = [":protobuf-c_proto"],
+)
+proto_library(
+    name = "protobuf-c_proto",
+    srcs = ["protobuf-c.proto"],
+    deps = ["@protobuf//:descriptor_proto"],
+)
+
 cc_library(
     name = "protobuf-c",
     srcs = [
@@ -10,21 +20,5 @@ cc_library(
     ],
     includes = [
         ".",
-    ],
-)
-
-cc_library(
-    name = "protobuf-c-pb",
-    srcs = [
-        "protobuf-c.pb.cc",
-    ],
-    hdrs = [
-        "protobuf-c.pb.h",
-    ],
-    includes = [
-        ".",
-    ],
-    deps = [
-        "@protobuf//:protoc_lib",
     ],
 )
