--- a/src/.bazelrc
+++ b/src/.bazelrc
@@ -1,6 +1,7 @@
 common --spawn_strategy=local
 common --verbose_failures
 
+test -c dbg
 build -c opt
 build --extra_toolchains=@local_config_cc//:cc-toolchain-x64_windows-clang-cl
 build --extra_execution_platforms=@protobuf//build_defs:x64_windows-clang-cl
