Supplement unit tests

--- a/src/protoc-gen-c/BUILD
+++ b/src/protoc-gen-c/BUILD
@@ -3,13 +3,11 @@ package(default_visibility = ["//visibility:public"])
 cc_binary(
     name = "protoc-gen-c",
     srcs = glob(["*.cc"]),
-    defines = ["PACKAGE_STRING=\\\"protobuf-c\\\""],
-    includes = [
-        ".",
-    ],
+    includes = ["."],
     deps = [
         "//protobuf-c:protobuf-c",
         "//protobuf-c:protobuf-c_cc_proto",
         "@protobuf//:protoc_lib",
+        "//:ver",
     ],
 )
