--- a/src/MODULE.bazel
+++ b/src/MODULE.bazel
@@ -1,3 +1,5 @@
+module(name = "protobuf_c")
+
 bazel_dep(name = "rules_cc", version = "0.1.1")
 cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
 use_repo(cc_configure, "local_config_cc")
