--- a/src/t/issue375/BUILD
+++ b/src/t/issue375/BUILD
@@ -1,8 +1,17 @@
+load("//:c_proto.bzl", "c_proto_library")
+
 package(default_visibility = ["//visibility:public"])
 
+proto_library(
+    name = "issue375_proto",
+    srcs = ["issue375.proto"],
+)
+c_proto_library(
+    name = "issue375_c_proto",
+    deps = [":issue375_proto"],
+)
 cc_test(
     name = "issue375",
     srcs = glob(["*.c"]),
-    includes = ["."],
-    deps = ["//protobuf-c"],
+    deps = [":issue375_c_proto"],
 )
