--- a/src/BUILD
+++ b/src/BUILD
@@ -1,7 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "ver",
+    name = "base",
     defines = [
         'PACKAGE_VERSION=\\"1.5.2\\"',
         'PACKAGE_STRING=\\"protobuf-c_1.5.2\\"',
