--- a/src/t/version/BUILD
+++ b/src/t/version/BUILD
@@ -5,7 +5,7 @@ cc_test(
     srcs = glob(["*.c"]),
     includes = ["."],
     deps = [
-        "//:ver",
-        "//protobuf-c",
+        "//:base",
+        "//protobuf-c:protobuf-c",
     ],
 )
