--- a/src/BUILD
+++ b/src/BUILD
@@ -1,3 +1,5 @@
+load("//:c_proto.bzl", "get_compiler_info")
+
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
@@ -6,4 +8,8 @@ cc_library(
         'PACKAGE_VERSION=\\"1.5.2\\"',
         'PACKAGE_STRING=\\"protobuf-c_1.5.2\\"',
     ],
+)
+
+get_compiler_info(
+    name = "compiler_info"
 )
