--- a/src/MODULE.bazel
+++ b/src/MODULE.bazel
@@ -1,5 +1,6 @@
 module(name = "protobuf_c")
 
+bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_cc", version = "0.1.1")
 cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
 use_repo(cc_configure, "local_config_cc")
