--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,4 +59,5 @@ jobs:
         uses: softprops/action-gh-release@v2
         if: github.ref_type == 'tag'
         with:
+          token: ${{ secrets.PAT }}
           files: artifacts/*/*
