--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,6 +2,8 @@ name: Update
 
 on:
   workflow_dispatch:
+  release:
+    types: [published]
   schedule:
     - cron: '0 10 * * 0' # at 10:00 UTC on sunday
 
