Use downloaded pack

--- a/pack_protobuf_c/src/BUILD
+++ b/pack_protobuf_c/src/BUILD
@@ -6,7 +6,7 @@ cc_library(
     hdrs = ["protobuf-c/protobuf-c.h"],
     includes = ["."],
     defines = select({
-        "@rules_c_proto//:no_std": ["PROTOBUF_C_NO_STD"],
+        "//:no_std": ["PROTOBUF_C_NO_STD"],
         "//conditions:default": [],
     }),
 )
