--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git add .
           git commit -F commit.txt
           git push origin main
         env:
