--- a/test/BUILD
+++ b/test/BUILD
@@ -44,10 +44,29 @@ cc_test(
     ],
 )
 
+proto_library(
+    name = "test-full_proto",
+    srcs = ["test-full.proto"],
+    deps = ["@protobuf_c//:protobuf-c_proto"],
+)
+c_proto_library(
+    name = "test-full_c_proto",
+    deps = [":test-full_proto"],
+)
+cc_test(
+    name = "test-full",
+    srcs = ["test-full.cc"],
+    deps = [
+        ":test-full_c_proto",
+        "@googletest//:gtest_main",
+    ],
+)
+
 test_suite(
     name = "tests",
     tests = [
         ":test",
         ":test2",
+        ":test-full",
     ],
 )
